Fixed various bugs and updated the example configuration file

--- a/example.conf
+++ b/example.conf
@@ -2,4 +2,5 @@ output_directory: "/tmp"
 gateway: "http://fleetservice.0-one.net/login.php"
 email:  "AGEROUTE"
 password: "AG-001"
+target: "local.trackwane.com"
 report_page: "http://fleetservice.0-one.net/pos_report.php"
