--- a/example.conf
+++ b/example.conf
@@ -1,6 +1,7 @@
-output_directory: "/tmp"
+working_directory: "/tmp/trackwane-simulator"
 gateway: "http://fleetservice.0-one.net/login.php"
 email:  "AGEROUTE"
+log_directory: "/var/log/trackwane-simulator/"
 password: "AG-001"
 target: "local.trackwane.com"
 report_page: "http://fleetservice.0-one.net/pos_report.php"
