Changes to configuration

--- a/example.conf
+++ b/example.conf
@@ -4,4 +4,6 @@ email:  "AGEROUTE"
 log_directory: "/var/log/trackwane-simulator/"
 password: "AG-001"
 target: "local.trackwane.com"
+delta: "30"
+max_devices: "20"
 report_page: "http://fleetservice.0-one.net/pos_report.php"
