Changed compression to gzip

--- a/example.conf
+++ b/example.conf
@@ -2,8 +2,9 @@ working_directory: "/tmp/trackwane-simulator"
 gateway: "http://fleetservice.0-one.net/login.php"
 email:  "AGEROUTE"
 log_directory: "/var/log/trackwane-simulator/"
+log: "console"
 password: "AG-001"
 target: "local.trackwane.com"
 delta: "30"
-max_devices: "20"
+max_devices: "3"
 report_page: "http://fleetservice.0-one.net/pos_report.php"
