Additional configuration options for agent

--- a/example.conf
+++ b/example.conf
@@ -1,10 +1,11 @@
-working_directory: "/tmp/trackwane-simulator"
+working_directory: "/tmp/trackwane-pioneer"
 gateway: "http://fleetservice.0-one.net/login.php"
 email:  "AGEROUTE"
 log_directory: "/var/log/trackwane-simulator/"
 log: "console"
 password: "AG-001"
 target: "local.trackwane.com"
-delta: "30"
-max_devices: "3"
+delta: "5"
+error_factor: "5"
+max_devices: "103"
 report_page: "http://fleetservice.0-one.net/pos_report.php"
