More error-checks when reading configuration file

--- a/example.conf
+++ b/example.conf
@@ -1,4 +1,4 @@
-working_directory: "/tmp/trackwane-pioneer"
+working_directory: "/home/okouam/Work/trackwane-pioneer/example-events"
 gateway: "http://fleetservice.0-one.net/login.php"
 email:  "AGEROUTE"
 log_directory: "/var/log/trackwane-simulator/"
